--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator using Tailwind</title>
+    <title>Basic Calculator using JS</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -48,8 +48,7 @@
             onclick="showInDisplay('.')">.</button>
         <button class="col-span-3 rounded-xl border-solid border-4 border-black p-5 items-centerh-12 bg-green-600"
             onclick="calculate()">=</button>
-        <button class="col-span-3 rounded-xl border-solid border-4 border-black p-5 items-centerh-12 bg-green-600"
-            data-action="add" onclick="showInDisplay('+')">+</button>
+        <button class="col-span-3 rounded-xl border-solid border-4 border-black p-5 items-centerh-12 bg-green-600" onclick="showInDisplay('+')">+</button>
     </div>
     <!-- shibbh -->
     <script src="src/script.js"></script>
