Changed some styles

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
             onclick="showInDisplay('0')">0</button>
         <button class="col-span-3 rounded-xl border-solid border-4 border-black p-5 items-centerh-12 bg-green-600"
             onclick="showInDisplay('.')">.</button>
-        <button class="col-span-3 rounded-xl border-solid border-4 border-black p-5 items-centerh-12 bg-green-600"
+        <button class="col-span-3 rounded-xl border-solid border-4 border-black p-5 items-centerh-12 bg-orange-500"
             onclick="calculate()">=</button>
         <button class="col-span-3 rounded-xl border-solid border-4 border-black p-5 items-centerh-12 bg-green-600" onclick="showInDisplay('+')">+</button>
     </div>
-    <!-- shibbh -->
     <script src="src/script.js"></script>
 </body>
 
